# Hospital-system-OOP-project

./: CMakeLists.txt  Disease.cpp  Disease.h  Doctor.cpp  Doctor.h  Medicine.cpp  Medicine.h  OOP.pptx  Patient.cpp  Patient.h  Person.cpp  Person.h  Record.cpp  Record.h  Room.cpp  Room.h  desktop.ini  main.cpp
